projects/vb6parse/snapshots/syntax/statements/file_operations/file_copy/filecopy_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/file_copy.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: FileCopyStatement
      children:
        - kind: FileCopyKeyword
          text: FileCopy
        - kind: Whitespace
          text: "    "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"a.txt\""
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"b.txt\""
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
